# reagle

./: .gitignore  Cargo.toml  README.md  build.rs  build_check.txt  build_output.txt  build_output_fail.txt  build_output_full.txt  build_test_output.txt  jules.patch  pr_diffs.txt  test_output.txt
.github/workflows/: CI.yml  bench.yml  full_genome_nightly.yml  integration.yml  jules_loop.yml
Java/beagleutil/: ChromIds.java  ChromInterval.java  CompHapSegment.java  IntInterval.java  PbwtDivUpdater.java  PbwtUpdater.java  SampleIds.java  ThreadSafeIndexer.java
Java/blbutil/: BGZIPOutputStream.java  BGZipIt.java  BitArray.java  BlockLineReader.java  Const.java  DoubleArray.java  FileIt.java  FileUtil.java  Filter.java  FloatArray.java  FloatList.java  InputIt.java  MultiThreadUtils.java  SampleFileIt.java  StringUtil.java  TriFunction.java  Utilities.java  Validate.java  VcfFileIt.java
Java/bref/: AsIsBref3Writer.java  Bref3.java  Bref3Header.java  Bref3It.java  Bref3Reader.java  BrefBlock.java  BrefWriter.java  CompressBref3Writer.java  SeqCoder3.java  UnBref3.java
Java/imp/: CodedSteps.java  HaplotypeCoder.java  ImpData.java  ImpIbs.java  ImpLS.java  ImpLSBaum.java  ImpStates.java  ImputedRecBuilder.java  ImputedVcfWriter.java  RefHapHash.java  StateProbs.java  StateProbsFactory.java
Java/ints/: CharArray.java  IndexArray.java  IntArray.java  IntIntMap.java  IntList.java  PackedIntArray.java  SynchedIntList.java  UnsignedByteArray.java  WrappedIntArray.java
Java/main/: Main.java  Par.java  Pedigree.java  RunStats.java  WindowWriter.java
Java/phase/: BasicPhaseStates.java  CodedSteps.java  EstPhase.java  FixedPhaseData.java  FwdPbwtPhaser.java  HmmParamData.java  HmmStateProbs.java  HmmUpdater.java  Ibs2.java  Ibs2Markers.java  Ibs2Sets.java  LowFreqPbwtPhaseIbs.java  LowFreqPhaseIbs.java  LowFreqPhaseStates.java  MarkerCluster.java  ParamEstimates.java  PbwtIbsData.java  PbwtPhaseIbs.java  PbwtPhaser.java  PbwtRecPhaser.java  PhaseBaum.java  PhaseBaum2.java  PhaseData.java  PhaseLS.java  RevPbwtPhaser.java  SamplePhase.java  SampleSeg.java  Stage2Baum.java  Stage2Haps.java  SwapRate.java
Java/vcf/: AlleleRefGTRec.java  BasicGT.java  BasicGTRec.java  BitArrayGTRec.java  BitArrayRefGTRec.java  FilterUtil.java  GT.java  GTRec.java  GeneticMap.java  HapRefGTRec.java  IntArrayRefGTRec.java  IntervalVcfIt.java  LowMafDiallelicGTRec.java  LowMafGTRec.java  Marker.java  (+27 more)
Rust/: .gitignore  Cargo.toml  IMPUTATION_ACCURACY_ROOT_CAUSE.md  IMPUTATION_INVESTIGATION.md  README.md  build.rs  clippy_output.txt  diff.txt  dr2_check  test_output.txt
Rust/.github/workflows/: bench.yml  integration.yml
Rust/benches/: benchmarks.rs  hmm_benchmark.rs
Rust/src/: config.rs  error.rs  lib.rs  main.rs
Rust/src/data/: alignment.rs  genetic_map.rs  haplotype.rs  marker.rs  mod.rs
Rust/src/data/storage/: binary_dictionary.rs  coded_steps.rs  dense.rs  dictionary.rs  matrix.rs  mod.rs  mutable.rs  phase_state.rs  sample_phase.rs  seq_coded.rs  sparse.rs  view.rs
Rust/src/io/: binary.rs  bref3.rs  mod.rs  streaming.rs  vcf.rs  window.rs
Rust/src/model/: hmm.rs  ibs2.rs  imp_ibs.rs  imp_states.rs  imp_states_cluster.rs  imp_utils.rs  mod.rs  online_hmm.rs  parameters.rs  pbwt.rs  pbwt_streaming.rs  phase_ibs.rs  phase_states.rs  recursive_ibs.rs  states.rs  target_clusters.rs
Rust/src/pipelines/: imputation.rs  imputation_streaming.rs  mod.rs  phasing.rs
Rust/src/srcs/: stats.rs
Rust/src/utils/: mod.rs  telemetry.rs  threading.rs  workspace.rs
Rust/tests/: .gitignore  beagle_reference.rs  fast_imputation.rs  gnomad_reference.rs  integration_test.py
benches/: benchmarks.rs
data/: README.md
scripts/: jules_loop.py
src/: config.rs  lib.rs  main.rs  test_violation.rs
tests/: beagle_reference.rs  integration_test.py
(+18 files in other folders)
