[package]
name = "reagle"
version = "0.1.0"
edition = "2024"
description = "High-performance genotype phasing and imputation"
repository = "https://github.com/SauersML/reagle"

[dependencies]
# CLI parsing
clap = { version = "4.5.23", features = ["derive"] }

# Parallelism
rayon = "1.10.0"
thread_local = "1.1.8"

# Bit manipulation for dense genotype storage
bitvec = "1.0.1"

# Error handling
thiserror = "2.0.9"
anyhow = "1.0.95"

# Logging
log = "0.4.22"
env_logger = "0.11.6"

# VCF parsing (genomics)
noodles = { version = "0.104.0", features = ["vcf", "bgzf", "csi", "tabix"] }

# Random number generation (for sampling)
rand = "0.9.0"
memmap2 = "0.9.9"
bytemuck = "1.24.0"
wide = "1.1.1"
serde = { version = "1.0.228", features = ["derive", "rc", "std"] }
serde_json = "1.0.148"

[dev-dependencies]
criterion = "0.8.1"
tempfile = "3.24.0"
flate2 = "1.0"

[build-dependencies]
grep = "^0.4.1"
walkdir = "^2.5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# Separate bench profile without LTO (avoids toolchain/linker conflicts)
[profile.bench]
lto = false
codegen-units = 1
opt-level = 3

[[bench]]
name = "hmm_benchmark"
harness = false

[lints.rust]
# Treat all warnings as errors
warnings = "deny"
