[package]
name = "reagle"
version = "0.1.0"
edition = "2024"
description = "High-performance genotype phasing and imputation"
repository = "https://github.com/SauersML/reagle"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Parallelism
rayon = "1.10"
thread_local = "1.1"

# Bit manipulation for dense genotype storage
bitvec = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Profiling (hierarchical timing output with --profile flag)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4"

# VCF parsing (genomics)
noodles = { version = "0.104", features = ["vcf", "bgzf", "csi", "tabix"] }

# Random number generation (for sampling)
rand = "0.9"
memmap2 = "0.9"
bytemuck = "1.24"
wide = "1.1"
serde = { version = "1.0", features = ["derive", "rc", "std"] }
# Fast number formatting for VCF output
itoa = "1.0"
ryu = "1.0"
serde_json = "1.0"
mini-mcmc = { git = "https://github.com/SauersML/general-mcmc", package = "mini-mcmc" }
aligned-vec = "0.6.4"

[dev-dependencies]
criterion = "0.8.1"
tempfile = "3.24.0"
flate2 = "1.0"
serial_test = "3.2"

[build-dependencies]
grep = "0.4"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# Separate bench profile without LTO (avoids toolchain/linker conflicts)
[profile.bench]
lto = false
codegen-units = 1
opt-level = 3

[[bench]]
name = "benchmarks"
harness = false

[lints.rust]
# Treat all warnings as errors
warnings = "deny"
